# image-classifier

./: .gitignore  LICENSE  README.md
app/: CMakeLists.txt  README.txt
app/eval/: Score.py  Theoric_Dataset.csv
app/eval/Extracted_Database/: flood_008_09_4_2.txt  person_015_20_3_5.txt
app/eval/preprocessing/: Theoric_Dataset.csv  Theoric_Dataset_Test.csv
app/include/: Drawing.h  MatchTemplate.h  Snippet.h  SquareDetector.h  Straightener.h  Straigthener.h  histogram.h  histogram.hpp  match_pattern.h  match_template.h  square_detection.hpp  square_detector.h  square_detector.hpp  tools.h  tools.hpp
app/include/feature-extraction/: FeatureExtractor.h
app/include/preprocessing/: Rectificator.h
app/src/: Drawing.cpp  MatchTemplate.cpp  Rectificator.cpp  Snippet.cpp  SquareDetector.cpp  Straightener.cpp  Straigthener.cpp  Straigthener.h  histogram.cpp  main.cpp  main_test.cpp  main_test_opencv.cpp  match_pattern.cpp  match_template.cpp  square_detection.cpp  square_detector.cpp  tools.cpp
app/src/feature-extraction/: FeatureExtractor.cpp
app/src/pre-processing/: MatchTemplate.cpp  Rectificator.cpp  Snippet.cpp  SquareDetector.cpp  main.cpp  main_test.cpp
app/src/preprocessing/: MatchTemplate.cpp  Rectificator.cpp  Snippet.cpp  SquareDetector.cpp
classifiers/: SVM_MLP_Vote.kf  SVM_de_test.kf  bagging_boosting.kf  basicSVM.kf  basic_knn.kf  knn_attr-selection.kf  knn_attributes-selection.kf  knn_find-best-k.kf  knn_mlp.kf  mlp.kf  mlp_test_zoning.kf  mlp_workbench_momentum.kf
classifiers/Flow/: MLP_A_2x2_3x3_Trainer.kf  MLP_Kfold_Model_Tester.kf
classifiers/flows/: Bagging_Boosting.kf  Exploration_Feat-Selection_Methods.kf  GridSearch_SVM.kf  KNN_find-best-N_test-dataset.kf  KNN_find-best-N_train-dataset.kf  MLP_A_2x2_3x3_Trainer.kf  MLP_Kfold_Model_Tester.kf  MLP_workbench_momentum.kf  Train-Test_Modular-Classifier.kf
classifiers/results/: Results_run_8_200220.txt  attribute_ranking  results_18.txt
classifiers/results/10/: Results_run_10_1_M02.txt  Results_run_10_2_M03.txt  Results_run_10_3_M04.txt  Results_run_10_4_M05.txt  Results_run_10_5_M06.txt  (+1 more)
data/: extracted_images.arff  preprocDataMover.sh  wrong_extracted.txt
data/test/: files_output.txt
(+96 files in other folders)
